--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.22.0",
     "@types/node-telegram-bot-api": "^0.64.13",
+    "@xenova/transformers": "^2.17.2",
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
