--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "my-app",
+  "name": "papacito-second-brain",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:-3000}",
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@types/node-telegram-bot-api": "^0.64.13",
     "@xenova/transformers": "^2.17.2",
